Fix blurry profile image

--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -192,8 +192,6 @@ img {
   max-width: 100%;
   width: auto;
   height: auto;
-  -ms-interpolation-mode: bicubic;
-  image-rendering: optimizeQuality;
   margin: 0 auto;
 }
 
